tests/build/cases/property/allowed_in_when_validation_named_type.rs
use zero_ui::core::{
    property,
    var::{IntoVar, VarValue},
    UiNode,
};

#[property(context)]
pub fn invalid<T: VarValue>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
    let _ = value;
    child
}

fn main() {}
